manifests/ingress/nginx/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - api.dmhub.cn
    secretName: api-ingress-secret
  rules:
  - host: api.dmhub.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: api 
          servicePort: 8015
