manifests/ingress/nginx/collectorentry-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: collectorentry-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header http_x_real_ip  $the_real_ip;
      proxy_set_header http_x_forwarded_for $the_real_ip;
spec:
  tls:
  - hosts:
    - cbe.dmhub.cn
    secretName: collectorentry-ingress-secret
  rules:
  - host: cbe.dmhub.cn
    http:
      paths:
      - path: /cbe/
        backend:
          serviceName: collectorentry
          servicePort: 18008
