manifests/ingress/nginx/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
  - hosts:
    - dashboard.dmhub.cn
    secretName: dashboard-ingress-secret 
  rules:
  - host: dashboard.dmhub.cn 
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard 
          servicePort: 8443
