manifests/ingress/nginx/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - grafana.dmhub.biz
    secretName: grafana-ingress-secret 
  rules:
  - host: grafana.dmhub.biz 
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana 
          servicePort: 3000
