manifests/ingress/nginx/urlshortener-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: urlshortener-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host $host;
spec:
  rules:
  - host: 51convert.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: urlshortener
          servicePort: 8000
