manifests/ingress/nginx/wechatcorp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wechatcorp-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: wechatcorp.dmhub.cn 
    http:
      paths:
      - path: /
        backend:
          serviceName: wechatcorp
          servicePort: 8006
